--- a/AndroidShellDome/project.properties
+++ b/AndroidShellDome/project.properties
@@ -11,4 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
+proguard.config=proguard-project.txt
 target=android-19
